[gd_scene load_steps=3 format=3 uid="uid://c0royd6p63ytb"]

[ext_resource type="Script" uid="uid://bc64fv247aoct" path="res://scripts/ui/world/difficulty_select.gd" id="1_75ni2"]
[ext_resource type="Texture2D" uid="uid://bxpqym46xw4au" path="res://assets/icons/background/背景.png" id="2_fs3o2"]

[node name="Difficulty Select" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_75ni2")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 80.0
offset_right = 755.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 52
text = "选择难度"
horizontal_alignment = 1
vertical_alignment = 1

[node name="speedrun" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 200.0
offset_right = 755.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 36
text = "速通模式"

[node name="harmless" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 280.0
offset_right = 755.0
offset_bottom = 340.0
theme_override_font_sizes/font_size = 36
text = "无伤模式"

[node name="endless" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 360.0
offset_right = 755.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 36
text = "无尽模式"

[node name="backroot" type="Button" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 440.0
offset_right = 755.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 36
text = "返回首页"

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(0.5625, 0.3443146)
texture = ExtResource("2_fs3o2")

[connection signal="pressed" from="speedrun" to="." method="_on_speedrun_btn_pressed"]
[connection signal="pressed" from="harmless" to="." method="_on_harmless_btn_pressed"]
[connection signal="pressed" from="endless" to="." method="_on_endless_btn_pressed"]
[connection signal="pressed" from="backroot" to="." method="_on_backroot_pressed"]
